Fixed low height devices overlap

--- a/app/globals.css
+++ b/app/globals.css
@@ -80,3 +80,9 @@
 html {
   scroll-behavior: smooth !important;
 }
+
+@media (max-height: 680px) {
+  .hide-arrow {
+    display: none;
+  }
+}
